--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -44,7 +44,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make Payment</button>
+				<!--<button id="make-payment">Make payment</button>-->
+				<div id="paypal-button-container"></div>
 			</div>
 			
 		</div>
@@ -68,6 +69,32 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://www.paypal.com/sdk/js?client-id=ATRBlswsW2UwO6c0-_-K93J2cmTkauYtfvz_ziG2-SfxhwrThpbwTVJs-qEXdFBLqH0M6tLEcSgP5KrK&currency=USD&disable-funding=credit"></script>
+	<script>
+	let Total = '{{order.get_cart_total}}';
+	paypal.Buttons({
+		style:{
+			color: 'blue',
+			shape: 'rect'
+		},
+		createOrder: function(data, actions) {
+		return actions.order.create({
+			purchase_units: [{
+			amount: {
+				value: parseFloat(Total).toFixed(2)
+			}
+			}]
+		});
+		},
+		onApprove: function(data, actions) {
+		return actions.order.capture().then(function(details) {
+			submitFormData();
+		});
+		}
+	}).render('#paypal-button-container');
+	</script>
+
+
 	<script>
 		let shipping = '{{order.shipping}}';
 		let total = '{{order.get_cart_total}}';
@@ -94,11 +121,11 @@
 			document.getElementById('form-button').classList.add('hidden');
 			document.getElementById('payment-info').classList.remove('hidden');
 		});
-
+/*
 		document.getElementById('make-payment').addEventListener('click', function(e){
 			submitFormData();
 		})
-
+*/
 		function submitFormData(){
 	    	console.log('Payment button clicked')
 
@@ -144,7 +171,8 @@
 	    	.then((data) => {
 				console.log('Success:', data);
 				alert('Transaction completed');  
-
+				cart = {}
+				document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/';
 				window.location.href = "{% url 'store' %}"
 
 				})
