--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -27,7 +27,33 @@
       }
       return cookieValue;
     }
+  
+
     const csrftoken = getToken('csrftoken');
+
+    function getCookie(name){
+      let cookieValue = null;
+      if (document.cookie && document.cookie!== '') {
+          const cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+              const cookie = cookies[i].trim();
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+    }
+    let cart = JSON.parse(getCookie('cart'));
+    if (cart == undefined){
+      cart = {};
+      console.log("cart is undefined");
+      document.cookie = 'cart='+ JSON.stringify(cart) +";domain=;path=/";
+    }
+    console.log(cart);
+
   </script>
 
 </head>
