--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -71,8 +71,12 @@
             </li>
           </ul>
           <div class="form-inline my-2 my-lg-0">
-            <a href="#"class="btn btn-warning">Login</a>
-            
+            {% if not request.user.is_authenticated %}
+              <a href="{% url 'login' %}"class="btn btn-warning">Login</a>
+            {% else %}
+              <a href="{% url 'logout' %}"class="btn btn-warning">Logout</a>
+            {% endif %}
+
             <a href="{% url 'cart' %}">
                <img  id="cart-icon" src="{% static 'images/cart.png' %}">
            </a>
